Fri Jun 10 12:58:49 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * ChangeLog:
          Fuzz. Removed tab.

Thu Jun  9 01:16:23 UTC 2011  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/RB_Tree.cpp: Fixed overly long ACE_TRACE string literals
          that were split across lines.  Thanks to Espen Harlinn <espen at
          harlinn dot no> for reporting this.

Wed Jun  8 21:05:56 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * bin/fuzz.pl:

          Switch from cvs to svn for the -m option that checks only modified
          files.  We haven't used cvs for some time now.

Tue Jun  7 20:45:56 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/CDR_Base.h:

          The inline function needs to be static to match the semantics of
          a struct constructor when the environment has native long
          doubles.

Tue Jun  7 18:20:36 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ace/CDR_Base.h:

          Added an inline function called LongDoubleAssign tha works
          as an alternative to the struct constructor of the same
          name when a 16-byte native long double exists and the struct
          is not defined. Thanks again to Adam Mitz <mitza at ociweb dot com>
          for the idea.

Mon Jun  6 22:17:26 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * ace/CDR_Base.h:

          The struct just added by Jeff also needs the export macro.

Mon Jun  6 19:51:27 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ace/CDR_Base.cpp:
        * ace/CDR_Base.h:

          Added a struct LongDoubleAssign which inherits from LongDouble,
          and contains the assignment operator and constructors, as well
          as a cast operator to LongDouble. This scheme allows generated
          code to use the LongDouble struct (when no 16-byte native long
          double exists) as a member in C++ unions, and to be initialized
          (when it appears as a constant) with the default copy constructor